--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sqlite3": "^5.1.7"
   },
   "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "start": "knex migrate:latest && pm2-runtime start ecosystem.config.js --env production",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest"
   },
