--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -9,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pg": "^8.11.5",
@@ -19,7 +21,7 @@
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "nodemon ./src/server.js",
-    "migrate": "knex migrate:latest && npm install"
+    "migrate": "knex migrate:latest"
   },
   "name": "kanban",
   "version": "1.0.0",
