--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
+  "engines": {
+    "node": ">="
+  },
+  "name": "API REST titasks",
+  "version": "1.0.0",
+  "main": "server.ts",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "scripts": {
+    "start": "node build/server.js",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build",
+    "knex": "node --import tsx ./node_modules/.bin/knex",
+    "lint": "eslint --fix"
+  },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "cron": "^3.1.7",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
@@ -14,24 +33,19 @@
     "npx": "^10.2.2",
     "path": "^0.12.7",
     "pg": "^8.11.5",
-    "pm2": "^5.4.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "ws": "^8.18.0"
+    "zod": "^3.23.8"
   },
-  "scripts": {
-    "start": "pm2-runtime start ecosystem.config.js --env production",
-    "dev": "nodemon ./src/server.js",
-    "migrate": "knex migrate:latest"
-  },
-  "name": "kanban",
-  "version": "1.0.0",
-  "main": "server.js",
   "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "@eslint/js": "^9.13.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.7.5",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
+    "tsup": "^8.3.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0"
+  }
 }
